5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1577_1559.log
== TEST (2019-03-19 18:37:41) 
-- CODE:
frase = ""
print(.upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:38:00) 
-- CODE:
frase = ""
print(upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia."))
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:38:24) 
-- CODE:
frase = ""
print(.upper("ada lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("ada lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:38:37) 
-- CODE:

print(.upper("ada lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("ada lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:39:40) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:39:48) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.145391
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:39:59) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:40:00) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.153008
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
